# DM818-Mandatory-Assignment-3

./: LICENSE  README.md
mpi-hopper/results/: job-dns1000-100.o20137746  job-dns1000-15000.o20138441  job-dns1000-400.o20137748  job-dns125-20000.o20137765  job-dns512-.o20137795
mpi-hopper/sources/: CMakeLists.txt  Makefile  comm.c  comm.h  job-dns1-20000  job-dns1000-1000  job-dns1000-15000.o20138410  job-dns1000-20000  job-dns1000-30000  job-dns1000-30000.o20138109  job-dns1000-800  job-dns125-1000  job-dns125-15000  job-dns125-15000.o20138442  job-dns125-25  job-dns125-25~  job-dns125-400  job-dns125-800.o20137745  job-dns512-  job-dns512-15000.o20138411  job-dns512-30000  job-dns512-30000.o20138113  job-dns512-~  main.c  main.cpp  matrix.c  matrix.h  matrix_mul.h  matrix_mul_hopper.c  matrix_mul_hopper.cpp  matrix_mul_imada.c  matrix_mul_imada.cpp
mpi-hopper/sources/Job Files/: job-dns1-  job-dns1000-100  job-dns1000-10000  job-dns1000-15000  job-dns1000-20000  job-dns1000-400  job-dns125-100  job-dns125-10000  job-dns125-20000  job-dns125-800  job-dns512-15000
mpi-hopper/sources/Job Results/: job-dns1-.o20137782  job-dns1-.o20137823  job-dns1000-1000.o20137747  job-dns1000-10000.o20137751  job-dns1000-20000.o20137754  job-dns1000-20000.o20138108  job-dns1000-800.o20137749  job-dns125-100.o20137742  job-dns125-1000.o20138093  job-dns125-10000.o20137743  job-dns125-20000.o20138094  job-dns125-25.o20137784  job-dns125-400.o20137744
report/: REPORT.aux  REPORT.tex  REPORT.toc  plot-data.xlsx
